--- a/output/index.html
+++ b/output/index.html
@@ -240,7 +240,7 @@
 
 
 
-   
+
     <!-- This is meddil two section  -->
 
 
@@ -294,19 +294,72 @@
         </div>
       </div>
       <div class="bg-white rounded-lg shadow-lg p-8">
-        <img alt="Illustration of a person working on a laptop with various tech icons connected to a cloud in the background" height="370" src="image/IT Support 1 (1).png" width="400"/>
+        <img alt="Illustrround" height="370" src="image/IT Support 1 (1).png" width="400"/>
        </div>
       </div>
+<div class=" flex justify-center items-center">
+<img  style="width: 1000px; height: 200px;" class="justify-center" src="image/test.png" alt="">
+</div>
 
 
 
 
 
 
+<div class=" flex justify-center items-center">
+<img src="image/Group 238901.png" alt="">
+</div>
+
+<div class="transform -translate-y-[10px] justify-center flex" >
+<img class="w-1/2 h-206 justify-center" src="image/Connector Vector.png" alt="">
+</div>
+<br> 
+
+<div class=" flex justify-center items-center">
+  <img src="image/Group 238901.png" alt="">
+  </div>
+  
 
 
 
+  
+  <div class="transform -translate-y-[10px] justify-center flex" >
+    <img class="w-1/2 h-206 justify-center" src="image/Connector Vector.png" alt="">
+    </div>
+    <br> 
     
+
+
+
+
+  
+<div class=" flex justify-center items-center">
+  <img src="image/Group 238901.png" alt="">
+  </div>
+  
+  <div class="transform -translate-y-[10px] justify-center flex" >
+  <img class="w-1/2 h-206 justify-center" src="image/Connector Vector.png" alt="">
+  </div>
+  <br> 
+  
+  <div class=" flex justify-center items-center">
+    <img src="image/Group 238901.png" alt="">
+    </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
