--- a/output/index.html
+++ b/output/index.html
@@ -403,7 +403,7 @@
                <!-- Logo Section -->
                <div class="w-full sm:w-1/3 mb-8 sm:mb-0 text-center sm:text-left">
                    <img alt="Company logo" class="mb-4 mx-auto sm:mx-0 pointer-events-none" height="100" src="image/c4u full logo_2022 1.png" width="100"/>
-                   <p class="text-gray-600">
+                   <p class="text-gray-600 hidden sm:block">
                        Level39
                        <br/>
                        One Canada Square,
@@ -437,7 +437,7 @@
                    </ul>
                </div>
    
-               <div class="w-full sm:w-1/6 mb-8 sm:mb-0 text-center sm:text-left">
+               <div class="w-full sm:w-1/6 mb-8 sm:mb-0 text-center sm:text-left hidden sm:block">
                    <h3 class="text-gray-800 font-bold mb-4">Upskill</h3>
 
                    <ul class="text-gray-600">
@@ -448,7 +448,7 @@
                 </ul>
             </div>
 
-            <div class="w-full sm:w-1/6 text-center sm:text-left">
+            <div class="w-full sm:w-1/6 text-center sm:text-left hidden sm:block">
                 <h3 class="text-gray-800 font-bold mb-4">Contact Us</h3>
                 <ul class="text-gray-600">
                     <li class="mb-2">Your message</li>
