Comment Name Update 2

--- a/output/index.html
+++ b/output/index.html
@@ -234,12 +234,7 @@
    </div>
 
 
-
-
-
-    <!-- This is meddil two section  -->
-
-
+    <!-- This is middle two section  -->
 
     <div class="flex flex-col md:flex-row space-x-0 md:space-x-8 justify-center shadow-lg p-7">
       <!-- Left Card -->
@@ -295,21 +290,10 @@
       </div>
 
 
-  
-
-
-
-      
 <div class=" flex justify-center items-center ">
   <img  style="width: 1000px; height: 200px;" class="justify-center pointer-events-none hidden sm:block" src="image/test.png" alt="">
   </div>
   
-  
-  
-        
-
-
-
 <div class=" flex justify-center items-center">
 <img class="pointer-events-none" src="image/Group 238901.png" alt="">
 </div>
