Another Comment name change

--- a/output/index.html
+++ b/output/index.html
@@ -144,7 +144,7 @@
           
 
 
-  <!-- This is middel Section -->
+  <!-- This is middle Section -->
 
 
   <div class="flex flex-wrap justify-center gap-8">
