Added Dark Mode Footer

--- a/output/index.html
+++ b/output/index.html
@@ -351,7 +351,7 @@
         <img  alt="People working on laptops and smiling" class="w-full h-96 object-cover" height="400" src="image/brooke-cagle-g1Kr4Ozfoac-unsplash 2.png" /> 
       </div>
        <div class="absolute inset-0 flex items-center justify-center ">
-         <div class="bg-white p-4 md:p-8 rounded-lg shadow-lg w-full md:w-1/2 h-64 md:h-84 sm:w-3/4 sm:h-72 hidden sm:block">
+         <div class="bg-white p-4 md:p-8 rounded-lg shadow-lg w-full md:w-1/2 h-64 md:h-84 sm:w-3/4 sm:h-72 hidden sm:block" id="meddil">
            <p class="text-xl md:text-2xl text-gray-800 mb-4">
    <svg class="w-8 h-8 md:w-12 md:h-12 lg:w-16 lg:h-16" style="width:30px; height: 30px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#fc9797" d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"/></svg> worked in retail and needed to make a change. The certificate is really designed for you to. This is something that anybody can do."
            </p>
